fix: Imagen Modal Proyecto Admin y Body overflow

--- a/src/app/admin/admin-layout/components/modal-project-admin/modal-project-admin.component.scss
+++ b/src/app/admin/admin-layout/components/modal-project-admin/modal-project-admin.component.scss
@@ -1,3 +1,26 @@
+::ng-deep{
+    .mat-mdc-dialog-surface{
+        overflow: hidden !important;
+        border-radius: 12px !important;
+    }
+}
+
+.scroll-delgado {
+  scrollbar-width: thin;
+  scrollbar-color: #c1c1c1 transparent;
+
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #c1c1c1;
+    border-radius: 4px;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #9e9e9e;
+  }
+}
+
 .seccionContactanos {
   padding: 0 1rem; 
   /* 3.2rem -> 2rem */
